kaushals dashbord file back thingy

--- a/static/style.css
+++ b/static/style.css
@@ -474,6 +474,15 @@ input[type = submit] {
 }
 
 
+.class-widget-buttons{
+    flex-direction: row;
+    margin-top: 5px;
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+}
+
+
 @keyframes fadeout {
     from {
         display: block;
