--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -11,27 +11,26 @@
         <div class="help-button" style="background: #ED3A46" onclick="back()" id="back">
             Go Back
         </div>
-    </div>  
+    </div>
 
 </div>
 
-<link rel = "stylesheet"
-          href = "https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"/>
-<div class = "dashboard-container">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+<div class="dashboard-container">
     <div class="left-widget visible">
-      <div class = "table-div">
-      <script>
-          function redirect(url) {
-              window.location.href = url;
-          }
-      </script>
-        {% for grade, classes in classes_by_grade.items() %}
-            <h1 class = "grade-label">{{ grade }}th Grade</h1>
-            <table class = "{{ grade }} grades">
+        <div class="table-div">
+            <script>
+                function redirect(url) {
+                    window.location.href = url;
+                }
+            </script>
+            {% for grade, classes in classes_by_grade.items() %}
+            <h1 class="grade-label">{{ grade }}th Grade</h1>
+            <table class="{{ grade }} grades">
                 <tr>
-                <th>Class     </th>
-                <th>Grade     </th>
-                <th>Credits     </th>
+                    <th>Class </th>
+                    <th>Grade </th>
+                    <th>Credits </th>
                 </tr>
                 {% for class in classes %}
                 <tr>
@@ -39,82 +38,91 @@
                     <td>{{class.received_grade}}</td>
                     <td>{{class.credits}}</td>
                     <td style="border: none">
-                        <span class = "material-symbols-outlined delete" id = "deleteButton" onclick="redirect('{{ url_for('dashboard.delete_class', class_id=class.id) }}')">delete</span>
+                        <span class="material-symbols-outlined delete" id="deleteButton" onclick="redirect('{{ url_for('dashboard.delete_class', class_id=class.id) }}')">delete</span>
                     </td>
                 </tr>
                 {% endfor %}
             </table>
-        {% endfor %}
-      </div>
+            {% endfor %}
+        </div>
     </div>
     <div class="right-widgets">
-      <div class = "class-widget visible">
-        <h1 class = "add-label">Add Classes</h1> <!--                                      update the 'add a class' text on submission-->
-        <form id = "addClass" action="{{ url_for('dashboard.dashboard') }}" method="POST" onsubmit="toggleVisibility()">
+        <div class="class-widget visible">
+            <h1 class="add-label">Add Classes</h1> <!--                                      update the 'add a class' text on submission-->
+            <form id="addClass" action="{{ url_for('dashboard.dashboard') }}" method="POST" onsubmit="toggleVisibility()">
 
-              <input type = 'text' id = 'class' class = "enter" name = 'name' placeholder="Enter the class name" list="possibleClasses" required>
-              <datalist id="possible-classes">
-                  {% for cls in all_classes %}
-                  <option>{{ cls }}</option>
-                  {% endfor %}
-              </datalist>
-              <br>
-              <!-- <label for = "grade" class = "dropdownLabel">Grade Recieved:</label> -->
-              <select class = "grade dropdown" id="grade" name = "received_grade" required>
-                <option value = "" disabled selected class = "initChoice">Class grade</option>
-                <option value="A">A</option>
-                <option value="B+">B+</option>
-                <option value="B">B</option>
-                <option value="B-">B-</option>
-                <option value="C+">C+</option>
-                <option value="C">C</option>
-                <option value="C-">C-</option>
-                <option value="N">N</option>
-              </select>
-              <br>
-              <input type = 'text' id = 'credits' class = "enter" name = 'credits', placeholder="Enter credits">
-              <br>
-              <!-- <label for = "year" class = "dropdownLabel">Year Taken:</label> -->
-              <select class = "year dropdown" id="year" name = "grade_taken" required>
-                <option value = "" disabled selected class = "init-choice">Year</option>
-                <option value="9">9</option>
-                <option value="10">10</option>
-                <option value="11">11</option>
-                <option value="12">12</option>
-              </select>
-              <br>
-              <!-- <label for = "type" class = "dropdownLabel">Class Type:</label> -->
-              <select class = "type dropdown" id="type" name = "type" required>
-                <option value = "" disabled selected class = "init-choice">Class Type</option>
-                <option value="">Normal</option>
-                <option value="AP">AP</option>
-                <option value="Honors">Honors</option>
-              </select>
-              <br>
-              <button type="submit" class="submit-button" id="tutorial">Add Class</button>
-        </form>
-                {% if not has_classes %}
-                    <form id="backupForm" action="{{ url_for('dashboard.restore_backup_data') }}" method="POST" enctype="multipart/form-data">
-                      <input class="submit-button" type="file" name="file" id="fileInput">
-                    </form>
+                <input type='text' id='class' class="enter" name='name' placeholder="Enter the class name" list="possibleClasses" required>
+                <datalist id="possible-classes">
+                    {% for cls in all_classes %}
+                    <option>{{ cls }}</option>
+                    {% endfor %}
+                </datalist>
+                <br>
+                <!-- <label for = "grade" class = "dropdownLabel">Grade Recieved:</label> -->
+                <select class="grade dropdown" id="grade" name="received_grade" required>
+                    <option value="" disabled selected class="initChoice">Class grade</option>
+                    <option value="A">A</option>
+                    <option value="B+">B+</option>
+                    <option value="B">B</option>
+                    <option value="B-">B-</option>
+                    <option value="C+">C+</option>
+                    <option value="C">C</option>
+                    <option value="C-">C-</option>
+                    <option value="N">N</option>
+                </select>
+                <br>
+                <input type='text' id='credits' class="enter" name='credits' , placeholder="Enter credits">
+                <br>
+                <!-- <label for = "year" class = "dropdownLabel">Year Taken:</label> -->
+                <select class="year dropdown" id="year" name="grade_taken" required>
+                    <option value="" disabled selected class="init-choice">Year</option>
+                    <option value="9">9</option>
+                    <option value="10">10</option>
+                    <option value="11">11</option>
+                    <option value="12">12</option>
+                </select>
+                <br>
+                <!-- <label for = "type" class = "dropdownLabel">Class Type:</label> -->
+                <select class="type dropdown" id="type" name="type" required>
+                    <option value="" disabled selected class="init-choice">Class Type</option>
+                    <option value="">Normal</option>
+                    <option value="AP">AP</option>
+                    <option value="Honors">Honors</option>
+                </select>
+                <br>
+                <button type="submit" class="submit-button" id="tutorial">Add Class</button>
+            </form>
 
-                    <script>
-                    document.getElementById('fileInput').addEventListener('change', function() {
-                      document.getElementById('backupForm').submit();
-                    });
-                    </script>
-               {% endif %}
-      </div>
+            <script>
+                document.getElementById('fileInput').addEventListener('change', function() {
+                    document.getElementById('backupForm').submit();
+                });
+            </script>
+            {% endif %}
+        </div>
 
-      <div class = "results-widget visible">
-        <h1 class = "info-label">Your Report</h1>
-        {% if has_classes %}
-          <h2 class="gpa-text">Unweighted GPA: {{ unweighted_gpa }}</h2>
-          <h2 class="gpa-text">Weighted GPA: {{ weighted_gpa }}</h2>
-          <!-- prettier-ignore -->
-          <a class = "getPDF" href = "{{ url_for('dashboard.download_report') }}">Download PDF</a>
-    {% endif %}
-      </div>
+        <div class="results-widget visible">
+            <h1 class="info-label">Your Report</h1>
+            {% if has_classes %}
+            <h2 class="gpa-text">Unweighted GPA: {{ unweighted_gpa }}</h2>
+            <h2 class="gpa-text">Weighted GPA: {{ weighted_gpa }}</h2>
+            <!-- prettier-ignore -->
+            <a class="getPDF" href="{{ url_for('dashboard.download_report') }}">Download PDF</a>
+            {% endif %}
+        </div>
+        <div class="results-widget visible">
+            <a class="getPDF" href="{{ url_for('dashboard.get_backup_data') }}">Download Backup Data</a>
+            <form id="backupForm" action="{{ url_for('dashboard.restore_backup_data') }}" method="POST" enctype="multipart/form-data">
+                <label for="fileInput">Upload Backup Data</label>
+                <input class="submit-button" type="file" name="file" id="fileInput">
+            </form>
+
+            <script>
+                document.getElementById('fileInput').addEventListener('change', function() {
+                    document.getElementById('backupForm').submit();
+                });
+            </script>
+        </div>
     </div>
 </div>
 
@@ -128,12 +136,12 @@
     var addClass = document.getElementById('tutorial');
 
 
-    window.onload = function () {
-        if(table.getElementsByTagName('table').length < 1){
+    window.onload = function() {
+        if (table.getElementsByTagName('table').length < 1) {
             classWidget.classList.remove('visible');
             leftWidget.classList.remove('visible');
             bottomWidget.classList.remove('visible');
-        }else{
+        } else {
 
             leftWidget.classList.add('visible');
             bottomWidget.classList.add('visible');
@@ -151,44 +159,44 @@
     var helpNext = document.getElementById('next');
     var helpBack = document.getElementById('back');
 
-/*
-    document.addEventListener('click', function(event) {
-        if(step === 0){
-            overlay.style.display = 'block';
-            helpWidget.style.display = 'flex';
-            classWidget.style.zIndex = '0';
-            helpText.textContent = "Welcome to our interactive click-through tutorial! Click the green button to continue, and click the red button to go back a step!";
-            helpBack.style.display = 'none';
-            helpNext.style.display = 'flex';
-        }
-    });
-*/
-    function next(){
+    /*
+        document.addEventListener('click', function(event) {
+            if(step === 0){
+                overlay.style.display = 'block';
+                helpWidget.style.display = 'flex';
+                classWidget.style.zIndex = '0';
+                helpText.textContent = "Welcome to our interactive click-through tutorial! Click the green button to continue, and click the red button to go back a step!";
+                helpBack.style.display = 'none';
+                helpNext.style.display = 'flex';
+            }
+        });
+    */
+    function next() {
         step++;
         showStep();
     }
 
-    function back(){
-        if(step > 0){
+    function back() {
+        if (step > 0) {
             step--;
         }
         showStep();
     }
-/*
-    addClass.addEventListener('click', function() {
-        step = 2;
-        showStep();
-    });
-*/
-    async function showStep(){
-        if(step === 1){
+    /*
+        addClass.addEventListener('click', function() {
+            step = 2;
+            showStep();
+        });
+    */
+    async function showStep() {
+        if (step === 1) {
             classWidget.style.zIndex = '2';
             helpText.textContent = "Here you may add a class. Fill out the fields with your class information. Hit 'Add Class' when you are done";
             helpBack.style.display = 'none';
             helpNext.style.display = 'none';
             await fetch("/dashboard/update_tutorial_status");
         }
-        if(step === 2){
+        if (step === 2) {
             overlay.style.display = 'block';
             helpWidget.style.display = 'flex';
             classWidget.style.zIndex = '0';
@@ -201,7 +209,7 @@
             helpBack.style.display = 'none';
             helpNext.style.display = 'flex';
         }
-        if(step === 3){
+        if (step === 3) {
             overlay.style.display = 'block';
             helpWidget.style.display = 'flex';
             classWidget.style.zIndex = '2';
@@ -214,7 +222,7 @@
             helpBack.style.display = 'flex';
             helpNext.style.display = 'flex';
         }
-        if(step === 4){
+        if (step === 4) {
             overlay.style.display = 'block';
             helpWidget.style.display = 'flex';
             classWidget.style.zIndex = '0';
@@ -227,7 +235,7 @@
             helpBack.style.display = 'flex';
             helpNext.style.display = 'flex';
         }
-        if(step === 5){
+        if (step === 5) {
             overlay.style.display = 'block';
             helpWidget.style.display = 'flex';
             classWidget.style.zIndex = '0';
@@ -240,7 +248,7 @@
             helpBack.style.display = 'flex';
             helpNext.style.display = 'flex';
         }
-        if(step === 6){
+        if (step === 6) {
             overlay.style.display = 'block';
             helpWidget.style.display = 'flex';
             classWidget.style.zIndex = '0';
@@ -253,7 +261,7 @@
             helpBack.style.display = 'none';
             helpNext.style.display = 'flex';
         }
-        if(step === 7){
+        if (step === 7) {
             overlay.style.display = 'none';
             helpWidget.style.display = 'none';
             await fetch("/dashboard/update_tutorial_status");
@@ -263,23 +271,20 @@
 
 
 
-
-
     {% if tutorial_status == TutorialStatus.PART_ONE %}
-        if(step === 0){
-            overlay.style.display = 'block';
-            helpWidget.style.display = 'flex';
-            classWidget.style.zIndex = '0';
-            helpText.textContent = "Welcome to our interactive click-through tutorial! Click the green button to continue, and click the red button to go back a step!";
-            helpBack.style.display = 'none';
-            helpNext.style.display = 'flex';
-        }
+    if (step === 0) {
+        overlay.style.display = 'block';
+        helpWidget.style.display = 'flex';
+        classWidget.style.zIndex = '0';
+        helpText.textContent = "Welcome to our interactive click-through tutorial! Click the green button to continue, and click the red button to go back a step!";
+        helpBack.style.display = 'none';
+        helpNext.style.display = 'flex';
+    }
 
     {% elif tutorial_status == TutorialStatus.PART_TWO %}
-        step = 2;
-        showStep();
+    step = 2;
+    showStep();
 
     {% endif %}
-
 </script>
 {% endblock %}
