Comments and stuff

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,11 +23,11 @@
             <img src="https://i.ibb.co/h2kPLLS/img1gpa-02.png" />
         </div>
     </div>
-    <div class="widget bottom-widget" id="help-screen">
+    <div class="widget instruction-widget" id="help-screen">
         <div class="image">
             <img src="https://placehold.co/400x400" />
         </div>
-        <div class="widget-text bottom-widget-text">
+        <div class="widget-text instruction-widget-text">
             <h2>How to Use!</h2>
             <p>Step 1: Create an account and login</p>
             <p>Step 2: Go to your dashboard</p>
