--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -15,7 +15,6 @@
 
 </div>
 
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 <div class="dashboard-container">
     <div class="left-widget visible">
         <div class="table-div">
@@ -48,8 +47,8 @@
     </div>
     <div class="right-widgets">
         <div class="class-widget visible">
-            <h1 class="add-label">Add Classes</h1> <!--                                      update the 'add a class' text on submission-->
-            <form id="addClass" action="{{ url_for('dashboard.dashboard') }}" method="POST" onsubmit="toggleVisibility()">
+            <h1 class="add-label">Add Classes</h1>
+            <form id="addClass" action="{{ url_for('dashboard.dashboard') }}" method="POST">
 
                 <input type='text' id='class' class="enter" name='name' placeholder="Enter the class name" list="possibleClasses" required>
                 <datalist id="possible-classes">
@@ -58,7 +57,7 @@
                     {% endfor %}
                 </datalist>
                 <br>
-                <!-- <label for = "grade" class = "dropdownLabel">Grade Recieved:</label> -->
+                <!-- Dropdown for selecting the recieved grade -->
                 <select class="grade dropdown" id="grade" name="received_grade" required>
                     <option value="" disabled selected class="initChoice">Class grade</option>
                     <option value="A">A</option>
@@ -73,7 +72,7 @@
                 <br>
                 <input type='text' id='credits' class="enter" name='credits' , placeholder="Enter credits">
                 <br>
-                <!-- <label for = "year" class = "dropdownLabel">Year Taken:</label> -->
+                <!-- Dropdown for selecting the year the class was taken -->
                 <select class="year dropdown" id="year" name="grade_taken" required>
                     <option value="" disabled selected class="init-choice">Year</option>
                     <option value="9">9</option>
@@ -82,7 +81,7 @@
                     <option value="12">12</option>
                 </select>
                 <br>
-                <!-- <label for = "type" class = "dropdownLabel">Class Type:</label> -->
+                <!-- Dropdown for selecting the type of class -->
                 <select class="type dropdown" id="type" name="type" required>
                     <option value="" disabled selected class="init-choice">Class Type</option>
                     <option value="">Normal</option>
@@ -106,6 +105,7 @@
             {% endif %}
         </div>
 
+        <!-- Div for the results widget -->
         <div class="results-widget visible">
             <h1 class="info-label">Your Report</h1>
             {% if has_classes %}
@@ -117,9 +117,7 @@
             <a class="getPDF" href="{{ url_for('dashboard.get_backup_data') }}">Download Backup Data</a>
             {% endif %}
         </div>
-
     </div>
-
 </div>
 <script>
     const leftWidget = document.querySelector('.left-widget');
