--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
     </div>
     <div class="widget instruction-widget" id="help-screen">
         <div class="image">
-            <img src="https://placehold.co/400x400" />
+            <img src="https://i.ibb.co/6gpBJc7/luh-calm.png" />
         </div>
         <div class="widget-text instruction-widget-text">
             <h2>How to Use!</h2>
